# simple-clickhouse

./: Readme.md
codegen/: Cargo.toml
codegen/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
